Tidied up folder structure - all training output to single folder, with subdirectories (by default, editable in config.ini) - all inference output to single folder, with subdirectories - output folders are generated automatically if they don't exist - models to be shipped are in a new "models" directory, models that are generated are under training_ouput - sample datasets folder renamed
closes #2

--- a/Workshop.ipynb
+++ b/Workshop.ipynb
@@ -276,9 +276,9 @@
     "import RavenBinaryDataset\n",
     "importlib.reload(RavenBinaryDataset)\n",
     "\n",
-    "wav_path_pos = \"./data/whipbird/pos\"\n",
-    "wav_path_neg = \"./data/whipbird/neg\"\n",
-    "spec_image_dir_path = \"./preparation/specs\"\n",
+    "wav_path_pos = \"./sample_data/whipbird/pos\"\n",
+    "wav_path_neg = \"./sample_data/whipbird/neg\"\n",
+    "spec_image_dir_path = \"./training_output/preparation/specs\"\n",
     "\n",
     "RavenBinaryDataset.prepare_data( wav_path_pos, wav_path_neg, spec_image_dir_path, spec_params, train_params['dataCSV'])\n"
    ]
@@ -646,8 +646,10 @@
    "source": [
     "importlib.reload(utils)\n",
     "\n",
-    "params = utils.read_config( \"config.ini\", \"options\")\n",
-    "utils.print_params(params)"
+    "# read config with a particular config section, e.g. \"infererence\"\n",
+    "inference_params = utils.read_config( \"config.ini\", \"infer\")\n",
+    "\n",
+    "utils.print_params(inference_params)"
    ]
   },
   {
@@ -665,17 +667,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_source = \"./data/XC201977 - Eastern Whipbird - Psophodes olivaceus.wav\"\n",
+    "file_source = \"./sample_data/test/XC201977 - Eastern Whipbird - Psophodes olivaceus.wav\"\n",
     "#file_source = \"\"\n",
     "\n",
-    "samples, sample_rate = librosa.core.load(file_source)\n",
-    "#samples, sample_rate = librosa.core.load(file_source, sr=None)\n",
-    "duration = len(samples)/sample_rate\n",
+    "if not os.path.exists(file_source):\n",
+    "    print(\"file doesn't exist\")\n",
+    "else:\n",
     "\n",
-    "print(str(len(samples)))\n",
-    "print(\"Audio file loaded.\")\n",
-    "print(\"Sample rate : \" + str(sample_rate))\n",
-    "print(\"Duration : \" + str(int(duration)))"
+    "    samples, sample_rate = librosa.core.load(file_source)\n",
+    "    #samples, sample_rate = librosa.core.load(file_source, sr=None)\n",
+    "    duration = len(samples)/sample_rate\n",
+    "\n",
+    "    print(str(len(samples)))\n",
+    "    print(\"Audio file loaded.\")\n",
+    "    print(\"Sample rate : \" + str(sample_rate))\n",
+    "    print(\"Duration : \" + str(int(duration)))"
    ]
   },
   {
@@ -698,8 +704,9 @@
     "fftWinSize = 512\n",
     "fftOverlap = 0.5\n",
     "maxFreq = 8000\n",
+    "time_win = 2.5\n",
     "spec = Spectrogram.Spectrogram(samples, sample_rate, duration)\n",
-    "spec.make_spec( fftWinSize, fftOverlap, maxFreq)\n"
+    "spec.make_spec( fftWinSize, fftOverlap, maxFreq, time_win)\n"
    ]
   },
   {
@@ -718,7 +725,7 @@
    "outputs": [],
    "source": [
     "img = spec.get_image_patch( 3.0, 5.0)\n",
-    "img.save( \"test.png\")\n",
+    "img.save( \"tmp/test.png\")\n",
     "Image(filename='test.png') "
    ]
   },
@@ -782,7 +789,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.13"
   },
   "toc-showtags": true,
   "vscode": {
