autogenerate folders for inference logging

--- a/Workshop.ipynb
+++ b/Workshop.ipynb
@@ -531,6 +531,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import importlib\n",
     "import utils\n",
     "import Inference\n",
     "importlib.reload(utils)\n",
@@ -771,6 +772,14 @@
     "\n",
     "net = NeuralNets.CNN_4_Layers( 512, 2, 12, 24, 32, 48)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08e62d1a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
