tidied up file structure

--- a/Workshop.ipynb
+++ b/Workshop.ipynb
@@ -249,10 +249,10 @@
     "import utils\n",
     "importlib.reload(utils)\n",
     "\n",
-    "spec_params = utils.read_spec_params( \"config.ini\" )\n",
+    "spec_params = utils.read_spec_params( \"sample_data/noisypitta/config.ini\" )\n",
     "utils.print_params(spec_params)\n",
     "\n",
-    "train_params = utils.read_train_params( \"config.ini\" )\n",
+    "train_params = utils.read_train_params( \"sample_data/noisypitta/config.ini\" )\n",
     "utils.print_params(train_params)"
    ]
   },
@@ -276,9 +276,9 @@
     "import RavenBinaryDataset\n",
     "importlib.reload(RavenBinaryDataset)\n",
     "\n",
-    "wav_path_pos = \"./sample_data/whipbird/pos\"\n",
-    "wav_path_neg = \"./sample_data/whipbird/neg\"\n",
-    "spec_image_dir_path = \"./training_output/preparation/specs\"\n",
+    "wav_path_pos = \"./sample_data/noisypitta/pos\"\n",
+    "wav_path_neg = \"./sample_data/noisypitta/neg\"\n",
+    "spec_image_dir_path = \"./training_output/preparation/noisypitta/specs\"\n",
     "\n",
     "RavenBinaryDataset.prepare_data( wav_path_pos, wav_path_neg, spec_image_dir_path, spec_params, train_params['dataCSV'])\n"
    ]
@@ -436,7 +436,7 @@
     "import utils\n",
     "importlib.reload(utils)\n",
     "\n",
-    "train_params = utils.read_train_params( \"config.ini\" )\n",
+    "train_params = utils.read_train_params( \"sample_data/noisypitta/config.ini\" )\n",
     "utils.print_params(train_params)\n"
    ]
   },
@@ -537,7 +537,7 @@
     "importlib.reload(utils)\n",
     "importlib.reload(Inference)\n",
     "\n",
-    "infer_params = utils.read_infer_params( \"config.ini\" )\n",
+    "infer_params = utils.read_infer_params( \"sample_data/noisypitta/config.ini\" )\n",
     "utils.print_params(infer_params)"
    ]
   },
