added content about adding examples from inference, removed auxiliary code

--- a/Workshop.ipynb
+++ b/Workshop.ipynb
@@ -25,11 +25,9 @@
    "source": [
     "### Dataset preparation \n",
     "\n",
-    "Annotating audio\n",
-    "\n",
-    "Balancing dataset \n",
-    "\n",
-    "Spectrogram segment generation "
+    "- Annotating audio\n",
+    "- Spectrogram segment generation \n",
+    "- Balancing dataset "
    ]
   },
   {
@@ -39,11 +37,9 @@
    "source": [
     "### Training\n",
     "\n",
-    "Training/validation split \n",
-    "\n",
-    "Running training \n",
-    "\n",
-    "error analysis "
+    "- Training/validation split \n",
+    "- Running training \n",
+    "- error analysis "
    ]
   },
   {
@@ -55,13 +51,10 @@
    },
    "source": [
     "### Inference\n",
-    "Running inference \n",
     "\n",
-    "Collating results \n",
-    "\n",
-    "inspecting verifying results \n",
-    "\n",
-    "labeling data for training "
+    "- Running inference \n",
+    "- inspecting verifying results \n",
+    "- labeling data for training "
    ]
   },
   {
@@ -310,7 +303,7 @@
    "id": "2e8f217c-1656-4828-a310-a363725b484c",
    "metadata": {},
    "source": [
-    "## 3. Training\n"
+    "## 2. Training\n"
    ]
   },
   {
@@ -484,7 +477,7 @@
    "id": "88019ff7-a0f4-4ebd-8c69-f97e514a32b8",
    "metadata": {},
    "source": [
-    "## 4. Inference"
+    "## 3. Inference"
    ]
   },
   {
@@ -494,7 +487,7 @@
    "source": [
     "So far we have trained the network. This took a set of fixed sized spectorgram images and fed them forward to make predictions, then performed backpropagation to update the weights. \n",
     "\n",
-    "Inference refers to making predictions on unlabelled data. This is what happens when we deploy our recognizer to do its job. \n",
+    "Inference refers to making predictions on unlabelled data. This is what happens when we deploy our recogniser to do its job. \n",
     "\n",
     "Unlike our train/test set, in deployment we will *normally* be recording longer continuious files, with the intention of locating the target call within these longer files. Therefore, our inference pipeline has a few differences from our training pipeline:\n",
     "\n",
@@ -509,10 +502,9 @@
     "\n",
     "Alternatively, we could overlap these segments. For example, we can take a 2.5 second segment every 1 second. This approach makes it less likely that a target call will be missed, since it will appear in several of the segments with varying time-offsets. With non-overlapping segments, many of the target calls will be cut in half across two segments, whereas if we overlap the segments, it means that there is likely to be at least one of the segments that contains a complete enough section of the call to produce a positive classification. \n",
     "\n",
-    "The downside of overlapping is that the amount of computation that needs to be performed \n",
+    "The downside of overlapping is that the amount of computation that needs to be performed. \n",
     "\n",
-    "\n",
-    "\n",
+    "You can adjust the overlap in the `config.ini` file\n",
     "\n"
    ]
   },
@@ -553,14 +545,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6cbd95a-5a5d-4dad-a314-bced8377f635",
-   "metadata": {},
-   "source": [
-    "### Run Inference"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "c9e284fe-0745-4982-995b-881cd48acc08",
    "metadata": {},
    "source": [
@@ -569,10 +553,46 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c6cbd95a-5a5d-4dad-a314-bced8377f635",
+   "metadata": {},
+   "source": [
+    "Our inference script generates a raven annotation file. \n",
+    "\n",
+    "To check through the results, you can open one of your inference wav files in raven, and then open the annotation file. \n",
+    "\n",
+    "A couple of things to note:\n",
+    "- The temporal \"resolution\" of the annotations will be determined by the segment size and the overlap. \n",
+    "- overlapping contiguous positively identified patches will be merged into a single annotation. \n",
+    "- there is no frequency information in the annotation, as the recognizer is not designed to detect frequency bounds. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f770f9b",
+   "metadata": {},
+   "source": [
+    "Look through some of your files to see how the recogniser did. If there are false positives (there probably will be lots), we can take these and put them in our negative set to reduce the false positive rate. \n",
+    "\n",
+    "In raven, go\n",
+    "\n",
+    "1) Go file > selection table\n",
+    "2) Select the tab of the selection table, right click, and rename Tab to 'neg'\n",
+    "3) scroll through the file looking for false negative annotations. When you see one, draw a new annotation over the top (while the new 'neg' selection table is active). \n",
+    "  - this annotation will be saved as a short audio clip, so make sure the annotation includes some padding around the call. For a 2.5 second CNN input size, around 4 seconds total duration for the annotation works. \n",
+    "4) Repeat this until you have a collection of several false positives in your neg selection table. \n",
+    "5) Go to `file > save all selections in current table as`\n",
+    "  - this will save a folder of short wav files. Rename this file \"neg_iteration_01\"\n",
+    "  \n",
+    "You might also notice some false negatives (i.e. the target species that was not found by the recogniser). In this case you can do a similar process to above, in a different new selection table. \n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a666473f-4bad-46ae-a4ab-205675cb6295",
    "metadata": {},
    "source": [
-    "## 5. Retraining"
+    "## 4. Retraining"
    ]
   },
   {
@@ -580,7 +600,24 @@
    "id": "c3ebb41b-d741-4c6a-854d-d3734035605b",
    "metadata": {},
    "source": [
-    "### Run Dataset preparation with the enhanced dataset "
+    "After adding examples to your negative folder (and maybe the positive folder too), scroll up to the top of this workbook and repeat all of the steps from sections 1 (dataset preparation) and 2 (training). \n",
+    "\n",
+    "See if your accuracy improved. \n",
+    "\n",
+    "You can then repeat section 3 Inference again, to see if you can improve further. \n",
+    "\n",
+    "### proceed with caution\n",
+    "\n",
+    "This iterative process of adding in examples based on inference output works great, however it can skew things a bit.\n",
+    "\n",
+    "If your recogniser has poor recall (meaning it misses lots of examples i.e. false negatives), then adding in the false positives to your negative set won't help this.   \n",
+    "\n",
+    "You can add in the positive detections to your positive set, but the particular examples that it finds are those which it's already good at finding. If there are certain variations that it's good at finding and certain ones that it's bad at finding, it won't improve at those that it has difficulty with. \n",
+    "\n",
+    "Remember that the training and testing split is done randomly. If you add many new examples in from the same inference file, or the same location, especially if they are near each other within that file, your test/validation set will start to resemble your training set a bit too much to give reliable accuracy.  Remember that ideally we want to test the model on data that is at least as different from your training data as the deployment data. \n",
+    "\n",
+    "If you want to be thorough about this, you can modify the model so that you manage the training/validation split manually in a principled way, and have a holdout test set at the end of the process from a different set of recordings not used, but that's beyond the scope of this workshop. \n",
+    "\n"
    ]
   },
   {
@@ -589,33 +626,6 @@
    "metadata": {},
    "source": [
     "### Run training again "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fc5fffa6-889a-4448-8ebd-25d803f684ac",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d7a5513b-97b6-4e93-9b90-d1b5e3fc47a0",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "43c60e64-4119-4276-9dc5-3b17df2972a8",
-   "metadata": {},
-   "source": [
-    "### Things to check\n",
-    "\n",
-    "- Short audio files \n",
-    "- Long Audio files\n",
-    "- Audio files with multiple channels\n",
-    "\n"
    ]
   },
   {
@@ -645,6 +655,8 @@
    },
    "outputs": [],
    "source": [
+    "import importlib\n",
+    "import utils\n",
     "importlib.reload(utils)\n",
     "\n",
     "# read config with a particular config section, e.g. \"infererence\"\n",
