added cnn images

--- a/Workshop.ipynb
+++ b/Workshop.ipynb
@@ -355,39 +355,96 @@
    "source": [
     "### Basic explanation of a CNN\n",
     "\n",
-    "(you don't need to know this to build the recogniser, but you might find it interesting)\n",
+    "\n",
+    "\n",
+    "To get an intuition on how what calculations a CNN is doing to go from a spectrogram to a prediction, we will start with something familiar, a simple linear function and modify it in small steps until we get to the CNN. \n",
+    "\n",
+    "You don't need to know this to build the recogniser, but you might find it interesting.\n",
+    "\n",
+    "1. Linear model with 1 input variable\n",
     "\n",
     "A function is something that maps an input to an output. An example of a function is\n",
     "\n",
-    "`f(x1, x2, x3) = a * x1 + b * x2 + c * x3`\n",
+    "`f(x) = a * x + b`\n",
     "\n",
-    "Here, we have three input variables: `x1`, `x2` and `x3`, and three parameters `a`, `b` and `c`. The output is a single number. \n",
+    "Let’s say we have two variables about a bunch of people: foot size and height. We could maybe use a function like the one above to predict foot size f(x) from height (x). We could use an algorithm to find the best values for the parameters a and b so that for those observations, the output of the function is as close as possible to the observation’s foot size value.  The process of finding these parameters for the line of best fit is linear regression. \n",
     "\n",
-    "By adjusting the parameters `a`, `b` and `c`, we can change how the function behaves. If we had some examples where we knew those three independent variables and the corresponding dependent variable, we could use an algorithm to find the best values for the parameters `a`, `b` and `c`, so that for those examples, the output of the function is as close as possible to the dependent variable.  Because this is a linear function mapping to any real number, this is called linear regression. \n",
+    "<img alt='short annotation' src='notebook_images/nn/lm_1_var.png' width=400 />\n",
+    "\n",
+    "2. Linear model with many input variables\n",
+    "\n",
+    "`f(x1, x2, x3) = (a1 * x1) + (a2 * x2) + (a3 * x3)`\n",
+    "\n",
+    "Here, we have three input variables: x1, x2 and x3, and 3 parameters a1, a2 a3. The output will be a single number. By adjusting the parameters a1, a2 and a3, we can change how the function behaves (we are ignoring that last parameter b from now on, it’s not super important for this basic explanation)\n",
+    "\n",
+    "<img alt='short annotation' src='notebook_images/nn/lm_3_vars.png' width=400 />\n",
+    "\n",
+    "3. Linear models with many outputs\n",
+    "\n",
+    "We could also combine a few of these functions, each with different parameters, so that we map the three input variables to a list of say two output variables. The number of parameters of the function is the number of input variables multiplied by the number of output variables. In our example, we have 3 inputs and 2 outputs for a total of 6 parameters. \n",
+    "\n",
+    "<img alt='short annotation' src='notebook_images/nn/lm_3_2.png' width=400 />\n",
+    "\n",
+    "4. Chained together\n",
+    "\n",
+    "We could then chain these together so that the output values from the first set of linear functions is used as the inputs for the next set, and so on.\n",
+    "\n",
+    "<img alt='short annotation' src='notebook_images/nn/chained.png' width=400 />\n",
+    "\n",
+    "5. Non linear tranformation\n",
+    "\n",
+    "By putting a non-linear transformation between these layers, we have constructed a big non-linear function. This is a deep neural network.  At each layer, the number of parameters is still the number of inputs * the number of outputs, i.e. the layer is fully connected\n",
+    "\n",
+    "<img alt='short annotation' src='notebook_images/nn/nonlinear.png' width=400 />\n",
+    "\n",
+    "6. Non-fully-connected\n",
+    "\n",
+    "Imagine a version of this network where each of the outputs of a layer only uses some of the inputs. That is, each output would have a receptive field that corresponds to some part of the input, this is represented by the picture below. Here, the first layer has 3 inputs and 2 outputs, but each output only has a receptive field of 2, so we have a total of 4 parameters in this layer, instead of 6 in the fully connected version.\n",
+    "\n",
+    "<img alt='short annotation' src='notebook_images/nn/non_fc.png' width=400 />\n",
+    "\n",
+    "7. Shared weights\n",
+    "\n",
+    "Now we take this non-fully connected version and we reuse the same weights for each of the outputs. Notice in the image that there are 4 connections but the same weights are used. So the first layer has 3 inputs and 2 outputs, but only needs to store 2 parameters. \n",
+    "\n",
+    "<img alt='short annotation' src='notebook_images/nn/shared_weights.png' width=400 />\n",
+    "\n",
+    "8. Grids for inputs and outputs. \n",
+    "\n",
+    "So far, we have been using a 1-dimensional column of values to represent the inputs and outputs. The input for our CNN is a two dimensional grid of spectrogram pixels.  So, we can take the same concept of shared weights above and just reshape it to 2 dimensions.  \n",
+    "\n",
+    "A set of shared weights is applied to a small square section of the input grid to produce a single pixel of the output, then moved to another position of the input to produce another output.  This small grid of weights is called a kernel. At each layer we have multiple kernels, each producing an output grid arranged in a 3-dimensional volume. \n",
+    "\n",
+    "<img alt='short annotation' src='notebook_images/nn/grid.png' width=600 />\n",
+    "\n",
+    "9. Fully connected final layer \n",
+    "\n",
+    "This is basically the idea behind how the function to go from an input to an output is constructed, with one more addition. After the final convolutional layer, we do a fully connected layer, so we can collapse it down to a single output value.  The output is a value between zero and one that represents the probability that the input was the target species.   \n",
+    "\n",
+    "There are many other additions we are not going to go into, such as pooling, dropout, padding, etc, but we have described the basic structure. \n",
+    "\n",
+    "#### Updating the weights. \n",
+    "\n",
+    "So the CNN is just a very big mathematical function on the inputs to produce an output, which contains a whole lot of parameters. But for understanding how the parameters are learned, it’s not much different from the tiny function in step 1.\n",
+    "\n",
+    "We mentioned above that for the very first function we could use an algorithm to find the optimal values of the parameters to fit our training examples. There is an algorithm called gradient descent that can be used to achieve this, and this algorithm is how neural networks learn.\n",
+    "\n",
+    "1. For each labelled example it sees, it runs it through the big function to produce a number between 0 and 1 representing the probability that the example is a positive example (i.e. it contains your target call).\n",
+    "2. It then compares the calculated probability with the desired probability (i.e. 1 if it was a positive example and 0 if it was a negative example), using something called a \"loss function\" - the output of the loss function for a given example's prediction is called its \"loss\".\n",
+    "3. It then does some calculus to figure out which direction to nudge each parameter so that the loss for that example would be smaller. In a neural network it does this step by step from the last layer to the first layer using a process called \"back propagation\".\n",
+    "\n",
+    "Actually, the training works in small batches of say 4 or 8 examples. The predictions for all examples in the batch are made, their loss is calculated, and the parameters are updated so that the average loss across the batch is reduced.\n",
     "\n",
     "\n",
-    "We could also combine a few of these functions with different paramers so that we map the three input variables to a list of say two output variables. \n",
     "\n",
-    "\n",
-    "We could then chain these together so that the output values from the first set of linear functions is used as the inputs for the next set, and so on. By putting a non-linear transformation between these layers, we have constructed a big non-linear function. This is a **deep neural network**. At each layer, the number of parameters of the function is the number of input variables multiplied by the number of output variables. \n",
-    "\n",
-    "A CNN is special type of deep neural network. In our case, the input variables are the pixels of the spectrogram, and the output is  a number which represents the probability of the spectrogram being the positive class. Inside the CNN are many parameters. \n",
-    "\n",
-    "\n",
-    "Unlike the above example, the number of parameters for each output of each layer is **not** the same as the number of input variables. This is because in a CNN, parameters are shared in a special way.  This is necessary because there are so many input parameters (tens of thousands of pixels). \n",
-    "\n",
-    "\n",
-    "We mentioned above that for the very first function we could use an algorithm to find the opitimal values of the parameters to fit our training examples. There is an algorithm called **gradient descent** that can be used to acheive this, and this algorithm is how neural networks learn. \n",
-    "\n",
-    "1. For each labelled example it sees, it runs it through its big function to produce a number between 0 and 1 representing the probability that the example is a positive example (i.e. it contains your target call). \n",
-    "  \n",
-    "2. It then compares the calculated probability with the desired probability (i.e. 1 if it was a positive example and 0 if it was a negative example), using something called a \"loss function\" - the output of the loss function for a given example's prediction is called its \"loss\". \n",
-    "  \n",
-    "3. It then does some calculus to figure out which direction to nudge each parameter so that the loss for that example would be smaller. In a neural network it does this step by step from the last layer to the first layer using a process called \"back propagation\". \n",
-    "\n",
-    "Actually, the training works in small batches of say 4 or 8 examples. The predictions for all examples in the batch are made, their loss is calculated, and the parameters are updated so that the average loss across the batch is reduced. \n",
-    "\n",
-    "\n",
+    " \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "872aa84b",
+   "metadata": {},
+   "source": [
     "### Training loss, validation loss, validation accuracy\n",
     "\n",
     "When training, each example will be fed into the CNN many times. Each round of feeding all the examples in is called an **epoch**. After we have fed all the examples in once, we have done one epoch of training. After each epoch we can calculate the average loss across all the examples. Training loss is the average loss across all the training examples. validation loss is the average loss across the validation examples. \n",
@@ -396,7 +453,7 @@
     "\n",
     "What we are more interested in is the validation loss. This will always be higher than the training loss, because these examples were never seen during training. As long as the validation loss is still decreasing, the network is still learning in a way that generalises to examples it's never seen before. At some point the validation loss will stop improving, usually before the training loss does. The validation loss might even increase after a while. This is a sign that the network is overfitting to the training set. This means that it is memorising the individual training examples while reducing its capacity to generalise its understanding of the target call type. \n",
     "\n",
-    " The probabilities and loss can be useful for some analysis, but really at the end of the day, the examples have been labelled as binary positive/negative and so what we are interested in is the binary predictions. Generally anything with a predicted probability over 50% is a 'positive' prediction and anything less is a 'negative' prediction.  The accuracy is the proportion of examples that were correctly labelled. \n"
+    " The probabilities and loss can be useful for some analysis, but really at the end of the day, the examples have been labelled as binary positive/negative and so what we are interested in is the binary predictions. Generally anything with a predicted probability over 50% is a 'positive' prediction and anything less is a 'negative' prediction.  The accuracy is the proportion of examples that were correctly labelled."
    ]
   },
   {
@@ -606,7 +663,7 @@
     "\n",
     "You can then repeat section 3 Inference again, to see if you can improve further. \n",
     "\n",
-    "### proceed with caution\n",
+    "### Proceed with caution\n",
     "\n",
     "This iterative process of adding in examples based on inference output works great, however it can skew things a bit.\n",
     "\n",
@@ -621,174 +678,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "9fb0428b-a82a-4f99-bbd7-5652a2ec07fd",
-   "metadata": {},
-   "source": [
-    "### Run training again "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "caada921-0317-490c-bd8f-e2531ddf2fda",
-   "metadata": {},
-   "source": [
-    "## Auxilary Code\n",
-    "\n",
-    "Below are various useful code snippets"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5b3f52c7-c549-47c8-bd60-33459f00c251",
-   "metadata": {},
-   "source": [
-    "#### Read config file parameters"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7944c19-716e-4618-a40b-7a1a8cfca135",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "import importlib\n",
-    "import utils\n",
-    "importlib.reload(utils)\n",
-    "\n",
-    "# read config with a particular config section, e.g. \"infererence\"\n",
-    "inference_params = utils.read_config( \"config.ini\", \"infer\")\n",
-    "\n",
-    "utils.print_params(inference_params)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "705a8520-7ed5-4a00-95ff-7ae90df3f235",
-   "metadata": {},
-   "source": [
-    "#### Load audio data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "156e972f-b8b2-4790-ac24-9c7f678460a6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_source = \"./sample_data/test/XC201977 - Eastern Whipbird - Psophodes olivaceus.wav\"\n",
-    "#file_source = \"\"\n",
-    "\n",
-    "if not os.path.exists(file_source):\n",
-    "    print(\"file doesn't exist\")\n",
-    "else:\n",
-    "\n",
-    "    samples, sample_rate = librosa.core.load(file_source)\n",
-    "    #samples, sample_rate = librosa.core.load(file_source, sr=None)\n",
-    "    duration = len(samples)/sample_rate\n",
-    "\n",
-    "    print(str(len(samples)))\n",
-    "    print(\"Audio file loaded.\")\n",
-    "    print(\"Sample rate : \" + str(sample_rate))\n",
-    "    print(\"Duration : \" + str(int(duration)))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "25a96f14-f782-4b51-bf10-7f101bd73950",
-   "metadata": {},
-   "source": [
-    "#### Generate spectrogram from loaded data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9588dcbf-c449-4a8d-b8a6-cd31d9f51cac",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "importlib.reload(Spectrogram)\n",
-    "\n",
-    "fftWinSize = 512\n",
-    "fftOverlap = 0.5\n",
-    "maxFreq = 8000\n",
-    "time_win = 2.5\n",
-    "spec = Spectrogram.Spectrogram(samples, sample_rate, duration)\n",
-    "spec.make_spec( fftWinSize, fftOverlap, maxFreq, time_win)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "724c4fa8-61e1-4daa-a511-96de35d1896d",
-   "metadata": {},
-   "source": [
-    "#### Get image patch from spectrogram and save image patch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6a042a88-ef65-4540-a33f-88363dd2e146",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img = spec.get_image_patch( 3.0, 5.0)\n",
-    "img.save( \"tmp/test.png\")\n",
-    "Image(filename='test.png') "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e5d6551b-e48c-4e0f-8621-0502a5477a69",
-   "metadata": {},
-   "source": [
-    "#### Read Raven File"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d8e06577-8af8-43f5-9cf1-ec6928d3c07e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import utils\n",
-    "importlib.reload(utils)\n",
-    "\n",
-    "anns = utils.load_Raven_annotations(\"./data/XC201977 - Eastern Whipbird - Psophodes olivaceus.Table.1.selections.txt\")\n",
-    "for ann in anns:\n",
-    "    print(ann.start)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0813ee25-9ba9-4810-af97-9313f9919315",
-   "metadata": {},
-   "source": [
-    "#### Classify image patch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2d67dfe2-6f73-419a-855f-f775ba932f37",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import NeuralNets\n",
-    "\n",
-    "net = NeuralNets.CNN_4_Layers( 512, 2, 12, 24, 32, 48)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "08e62d1a",
+   "id": "9b06eb41",
    "metadata": {},
    "outputs": [],
    "source": []
