updated config to not parse inference directory

--- a/src/Workshop.ipynb
+++ b/src/Workshop.ipynb
@@ -150,6 +150,7 @@
     "from IPython.display import Image\n",
     "\n",
     "import utils\n",
+    "import config\n",
     "import Spectrogram \n"
    ]
   },
@@ -227,11 +228,11 @@
     "\n",
     "print(os.path.exists(\"data/sample_data/noisypitta/config.ini\"))\n",
     "\n",
-    "spec_params = utils.read_spec_params( \"data/sample_data/noisypitta/config.ini\" )\n",
-    "utils.print_params(spec_params)\n",
+    "spec_params = config.read_spec_params( \"data/sample_data/noisypitta/config.ini\" )\n",
+    "config.print_params(spec_params)\n",
     "\n",
-    "train_params = utils.read_train_params( \"data/sample_data/noisypitta/config.ini\" )\n",
-    "utils.print_params(train_params)\n"
+    "train_params = config.read_train_params( \"data/sample_data/noisypitta/config.ini\" )\n",
+    "config.print_params(train_params)\n"
    ]
   },
   {
@@ -373,8 +374,8 @@
     "import utils\n",
     "importlib.reload(utils)\n",
     "\n",
-    "train_params = utils.read_train_params( \"data/sample_data/noisypitta/config.ini\" )\n",
-    "utils.print_params(train_params)\n"
+    "train_params = config.read_train_params( \"data/sample_data/noisypitta/config.ini\" )\n",
+    "config.print_params(train_params)\n"
    ]
   },
   {
@@ -491,8 +492,16 @@
     "importlib.reload(utils)\n",
     "importlib.reload(Inference)\n",
     "\n",
-    "infer_params = utils.read_infer_params( \"data/sample_data/noisypitta/config.ini\" )\n",
-    "utils.print_params(infer_params)"
+    "infer_params = config.read_infer_params( \"data/sample_data/noisypitta/config.ini\" )\n",
+    "config.print_params(infer_params)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7646eec3",
+   "metadata": {},
+   "source": [
+    "First find a file you wish to run the recognizer over. There is a file containing noisy pitta here: https://cloudstor.aarnet.edu.au/plus/s/Fsoi5Dm0AJ1JvYU?path=%2FMake%20you%20own%20recognizer . Save this file to a folder on your computer and then update the function parameter below to point to that folder. \n"
    ]
   },
   {
@@ -502,7 +511,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Inference.do_inference( infer_params, spec_params)"
+    "Inference.do_inference( infer_params, spec_params, \"inference_audio/noisypitta\")"
    ]
   },
   {
