--- a/src/Workshop.ipynb
+++ b/src/Workshop.ipynb
@@ -501,7 +501,7 @@
    "id": "7646eec3",
    "metadata": {},
    "source": [
-    "First find a file you wish to run the recognizer over. There is a file containing noisy pitta here: https://cloudstor.aarnet.edu.au/plus/s/Fsoi5Dm0AJ1JvYU?path=%2FMake%20you%20own%20recognizer . Save this file to a folder on your computer and then update the function parameter below to point to that folder. \n"
+    "First find a file you wish to run the recognizer over. There is a file containing noisy pitta here: https://connectqutedu.sharepoint.com/sites/QUTEcoacousticsAnon/Shared%20Documents/Forms/AllItems.aspx?ga=1&id=%2Fsites%2FQUTEcoacousticsAnon%2FShared%20Documents%2F2022%20Ecoacoustics%20Symposium%2FMake%20you%20own%20recognizer. Save this file to a folder on your computer and then update the function parameter below to point to that folder. \n"
    ]
   },
   {
